--- a/src/app/pages/tabs/pages/tabs-tasks/components/tabs-tasks-card/tabs-tasks-card.component.scss
+++ b/src/app/pages/tabs/pages/tabs-tasks/components/tabs-tasks-card/tabs-tasks-card.component.scss
@@ -13,6 +13,7 @@ span {
   height: sizeHeight(210);
   width: sizeWidth(660);
   padding: 0 sizeWidth(10);
+  margin-bottom: sizeHeight(20);
 
   display: flex;
   align-items: center;
