--- a/src/app/pages/tabs/pages/tabs-tasks/tabs-tasks.page.scss
+++ b/src/app/pages/tabs/pages/tabs-tasks/tabs-tasks.page.scss
@@ -41,7 +41,6 @@
     .tab {
       width: sizeWidth(660);
       margin-top: sizeHeight(15);
-      gap: sizeHeight(20);
 
       display: flex;
       flex-direction: column;
